[gd_scene load_steps=3 format=3]

[ext_resource type="Script" path="res://scenes/release-manager/components/project-card.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://wop6qk8dkl40" path="res://icon.svg" id="2"]

[node name="ProjectCard" type="Panel"]
custom_minimum_size = Vector2(0, 125)
script = ExtResource("1")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/margin_left = 12
theme_override_constants/margin_top = 11
theme_override_constants/margin_right = 12
theme_override_constants/margin_bottom = 13

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="ThumbTextureRect" type="TextureRect" parent="MarginContainer/HBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(107, 105)
layout_mode = 2
texture = ExtResource("2")
expand_mode = 1
stretch_mode = 5

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/separation = 0

[node name="Spacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer2" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2"]
layout_mode = 2

[node name="ProjectNameLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "godot-valet"
clip_text = true

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8

[node name="GodotVersionLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer2/HBoxContainer/HBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_font_sizes/font_size = 20
text = "v4.5"
horizontal_alignment = 2

[node name="MarginContainer3" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10

[node name="HBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 0

[node name="VersionLeftLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "v0.0.1 ‚Üí "

[node name="VersionRightLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer3/HBox"]
unique_name_in_owner = true
layout_mode = 2
theme_override_font_sizes/font_size = 20
text = "v0.0.1"

[node name="MarginContainer" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 5

[node name="HBox" type="HBoxContainer" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer"]
layout_mode = 2
theme_override_constants/separation = 5

[node name="ProjectPathLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
theme_override_colors/font_color = Color(1, 1, 1, 1)
text = "C:/projects/example"
clip_text = true
text_overrun_behavior = 3

[node name="FolderButton" type="Button" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer/HBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 0)
layout_mode = 2
mouse_default_cursor_shape = 2
flat = true
text = "üìÅ"

[node name="BottomSpacer" type="Control" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 3

[node name="MarginContainer4" type="MarginContainer" parent="MarginContainer/HBoxContainer/VBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_bottom = 5

[node name="PublishedDateLabel" type="Label" parent="MarginContainer/HBoxContainer/VBoxContainer/MarginContainer4"]
unique_name_in_owner = true
layout_mode = 2
text = "Published: Never"
vertical_alignment = 1
clip_text = true
text_overrun_behavior = 3
